--- a/GerenciadorDomotico/GerenciadorDomotico/Dispositivos/ctlDispositivoBase.resx
+++ b/GerenciadorDomotico/GerenciadorDomotico/Dispositivos/ctlDispositivoBase.resx
@@ -117,4 +117,133 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imgList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imgList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC+
+        GwAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABPAEAATwBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwAB8AMAATwDAAEBAQABCAUAAUABOBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AgAB/wEABP8BAAH/
+        AQAE/wEABv8BAAT/AQAB/wHvARMBFAH3Af8BAAH/AQAE/wEAAf8BAAT/AQAB/wEABP8BAAH/AQAD/wEA
+        Af8BAAT/AQAB/wEABP8BAAb/AQAE/wEAAv8C8wH0Af8BAAH/AQAE/wEAAf8BAAT/AQAB/wEABP8BAAH/
+        AQAD/3gAGf8C9AEHBEMBkgP0B/8BAAb/AQAG/wEAHP8BBwFtBBQBbQEHAv8BAAb/AQAG/wEABv8BAAL/
+        eAAE/wEAEf8B9AHqDEMB6gf/AQAG/wEABv8BAAX/AQAT/wHyAeoIFAHqAfIB/wEABv8BAAb/AQAG/wEA
+        Af95AAT/AQAQ/wHxAfgE7AH4AewB+ATsAfgB6gG8AQAG/wEABv8BAAb/AgAE/wEAEf8B8gwUAfIB/wEA
+        Bv8BAAb/AQAG/3kABv8BABX/AfQB8wHwAQcB9wHsAeoBFQFDAQcB/wEABv8BAAb/AQAM/wEAEP8BEgwU
+        ARIC/wEABv8BAAb/AQAG/3kABv8BAA7/AfMBBwH3AewB6gEVCUMBBwL/AQAG/wEABv8BAAT/AgAG/wEA
+        Dv8BBw4UAe4C/wEABv8BAAb/AQAE/3kAAf8BAAb/AQAN/wEHDkMBBwP/AQAG/wEABv8BAAX/AQAG/wEA
+        Df8B7A4UAewD/wEABv8BAAb/AQAE/3gAAv8BABP/AfIJBwHvAe0BbQEVAUMBBwT/AQAG/wEABv8BAAX/
+        AQAT/wHtDhQB7QT/AQAG/wEABv8BAAP/eAAD/wEABv8BAA//AfQB8QEHAfcB+AESBUMBBwX/AQAG/wEA
+        Bv8BAAX/AQAG/wEADP8O8Ab/AQAG/wEABv8BAAL/eAAE/wEABv8BAAr/AfEB+AESDEMBBwb/AQAG/wEA
+        Bv8BAAX/AQAG/wEACf8B9AEHA+8B9wrvAQcB9AX/AQAG/wEABv8BAAH/eQAE/wEABv8BAAn/AQcOQwEH
+        AQAG/wEABv8BAAb/AgAE/wEABv8BAAj/AfgQFAH4Bv8BAAb/AQAG/3kABv8BAAb/AQAI/wH0AfMB8gHz
+        AfIB8wLyAbwB9wH4ARQDQwEHAf8BAAb/AQAG/wEADP8BAAb/AQAH/wH4EBQB6wf/AQAG/wEABv95AAb/
+        AQAG/wEACf8B8wHwAQcB7AHqARUHQwEHAv8BAAb/AQAG/wEABP8CAAb/AQAG/wEABv8B9BD3AfQB/wEA
+        Bv8BAAb/AQAE/3kAAf8BAAb/AQAG/wEABv8BvA5DAQcD/wEABv8BAAb/AQAF/wEABv8BAAb/AQAG/wHw
+        DewB7QG8A/8BAAb/AQAG/wEABP94AAL/AQAG/wEABv8BAAX/AeoOQwFtBP8BAAb/AQAG/wEABf8BAAb/
+        AQAG/wEABP8B9BAUAfQD/wEABv8BAAb/AQAD/3gAA/8BAAb/AQAG/wEAA/8B8xBDAfQE/wEABv8BAAb/
+        AQAF/wEABv8BAAb/AQAE/wETDhQBEwX/AQAG/wEABv8BAAL/eAAE/wEABv8BAAn/AfMQQwHzBf8BAAb/
+        AQAG/wEABf8BAAb/AQAK/wHzDgcB8wb/AQAG/wEABv8BAAH/eQAE/wEABv8BAAb/AQAB/wHyEEMB8gb/
+        AQAG/wEABv8CAAT/AQAG/wEABv8BAAHzEgcB8wX/AQAG/wEABv95AAb/AQAG/wEABv8BAAG8BUMB6wEV
+        A0MB6wEVBEMBvAf/AQAG/wEADP8BAAb/AQAG/wEHAUsQUQFLAQcG/wEABv8BAAb/eQAG/wEABv8BAAb/
+        AfcEQwHsAf8BBwJDAesB/wG8BEMB9wj/AQAG/wEABP8CAAb/AQAG/wEABf8BkhJSAZIH/wEABv8BAAT/
+        eQAB/wEABv8BAAb/AQAF/wHqBEMBvAH/AfcCQwHqAf8B8wRDAeoJ/wEABv8BAAX/AQAG/wEABv8BAAT/
+        AesSUgHrCP8BAAb/AQAE/3gAAv8BAAb/AQAG/wEAA/8B8wVDAfMB/wFtA0MC/wEUBEMB8wn/AQAG/wEA
+        Bf8BAAb/AQAG/wEAA/8BEhJSARIJ/wEABv8BAAP/eAAD/wEABv8BAAb/AQAC/wHvBEMBFAL/BEMB8QH/
+        AewEQwH3Ef8BAAX/AQAG/wEABv8BAAH/AfMBShJSAUoB8xD/AQAC/3gABP8BAAb/AQAG/wEAAfQBFQRD
+        AewB/wHxBEMBBwH/Ae8EQwEVAfQK/wEABv8BAAX/AQAG/wEABv8BAAEHAVESUgFRAQcK/wEABv8BAAH/
+        eQAE/wEABv8BAAb/AfcFQwEHAQAB7wRDAewB/wHxBUMB9wv/AQAG/wIABP8BAAb/AQAG/wHsFFIB7Av/
+        AQAG/3kABv8BAAb/AQAE/wHzBkMB8gH/AesEQwEUAv8GQwHzC/8BAAz/AQAG/wEABP8B9AESFFIBEgz/
+        AQAG/3kABv8BAAb/AQAD/wFtBkMC/wEVBUMB9AH/AeoFQwFtDP8BAAX/AQAG/wEABv8BAAP/AQcBURRS
+        AVEBBwz/AQAF/3gAAf8BAAb/AQAG/wEAAf8B9wZDAesB/wHyBkMB8AH/AZIGQwH3DP8BAAX/AQAG/wEA
+        Bv8BAAL/AeoWUgHqDf8BAAT/eAAC/wEABv8BAAb/AfEHQwHvAf8BBwZDAfcB/wG8B0MB8Az/AQAF/wEA
+        Bv8BAAb/AQABBwFLFlIBSwEHDf8BAAP/eAAD/wEABv8BAAT/AfQBFAdDAfEB/wHsBkMBbQH/AfMHQwEU
+        AfQM/wEABf8BAAb/AQAF/wH0ARIYUgESAfQN/wEAAv94AAT/AQAG/wEAA/8B6whDAfQB/wEUB0MC/wEV
+        B0MB6wb/AQAG/wEABf8BAAb/AQAE/wH4CFIBGgEbBlIBGwEaCFIB7Af/AQAG/wEAAf95AAT/AQAG/wEA
+        Af8BBwhDAeoB/wHzCEMB8gH/AesIQwEHDf8CAAT/AQAG/wEAAv8BBwFKB1IBWQH2ARoGUgEaAfYBWAdS
+        AUoBBw7/eQAG/wEABv8B9AEVCEMBkgH/AbwIQwEHAf8B7whDARUB9BP/AQAG/wEAAfMBEwhSAZoB/wF5
+        BlIBeQH/AZoIUgETAfMO/3kABv8BAAX/AewJQwHwAf8BkgNDAuoDQwHsAQAB8QlDAewN/wEABv8BAAb/
+        AesIUgFYAfYBGwhSARoB9glSAesO/3gAAf8BAAb/AQAD/wHzCkMB9AH/AeoBQwETAfIC/wHyARMBQwET
+        Af8B9ApDAfMN/wEABv8BAAT/AfABSghSAZoB/wF6CFIBegH/AZoIUgFKAfAN/3gAAv8BAAb/AQAC/wH3
+        CUMBEwH/AfQCQwHxAf8C9AH/AfACQwH0Af8BEglDAZIO/wEABv8BAAP/AesJUgH2ARsKUgHDAfQJUgHr
+        Df94AAP/AQAG/wEAAf8BFAlDAewB/wHxAUMBFAL/ARQBEwL/ARUBQwHxAf8B7AlDARQP/wEABv8BAAH/
+        AfMBSghSAXoB/wF6ClIBegH/AXoIUgFKAfMM/3gABP8BAAb/AfMKQwEHAf8B7wFDAeoB/wHzAkMB8wEA
+        AeoBQwHvAf8BBwpDAfMP/wEABv8BAAEHAVEIUgEbAfYMUgH2AcMIUgFRAQcM/3kABP8BAAX/AQcKQwH3
+        Af8BvAFDAZIB/wHxAkMB8QH/Ae0BQwG8Af8B9wpDAQcK/wIABP8BAAb/AZIIUgF6Af8BmgxSAZoB/wF6
+        CFIBkgv/eQAG/wEABP8B9wpDARIC/wHyAf8BAAHsAkMB7QL/AfIC/wESCkMB9xH/AQAF/wHrCFIBGgH2
+        DVIBWAH2ARsIUgHrDP95AAb/AQAD/wHsC0MBkgP/AQcEQwG8A/8B7QtDAewL/wEABv8BAAT/AW0HUgF5
+        Af8Bmg5SAZoB/wF6B1IBbQz/eAAB/wEABv8BAAL/AewMQwEUAfgB6gZDAeoB+AEUDEMB7Az/AQAG/wEA
+        A/8BbQdSARoB9gFZC1IBWAJSAVgB/wEaB1IBbQz/eAAC/wEABv8BAAH/AewkQwHsDf8BAAb/AQAC/wHr
+        BlIBWAH/AfYBGgHDAfYB/wEbAVgEUgFYARsB/wH2ARsBwwH2Af8BWQZSAesM/3gAA/8BAAb/AQABkiRD
+        AZIO/wEABv8BAAH/AfgGUgF6Af8C9gEbAhoB/wH2AVgCUgFZARsB/wIaAcMB9AL/AXoGUgHsDP94AAT/
+        AQAG/wEHJEMBBwT/AQAK/wEABv8BAAH3B1IBWAVSAXoC9gJ6AfYB/wF6BVIBWQdSAfcF/wEABv95AAT/
+        AQAF/wHwJEMB8Ar/AgAE/wEABv8B8AFLDVIBeQT2AXkNUgFLAfAL/3kABv8BAAT/AfQkQwH0Ef8BAAX/
+        AfQBSg5SAVgC9gFYDlIBSgH0DP95AAb/AQAE/wHrIkMB6wH/AQAK/wEABv8BAAX/AfggUgH4Av8BAAr/
+        eAAB/wEABv8BAAP/AbwiQwG8Av8BAAr/AQAG/wEABP8B8QFLHlIBSwHxA/8BAAn/eAAC/wEABv8BAAP/
+        ARQgQwEUBP8BAAr/AQAG/wEABP8B6x5SAesF/wEACP94AAP/AQAG/wEAAv8BByBDAQcF/wEABv8BAAP/
+        AQAG/wEAA/8B8wFKHFIBSgHzBv8BAAb/eQAE/wEABv8BAAL/AW0eQwFtB/8BAAr/AQAG/wEAA/8BBwFL
+        GlIBSwEHAf8BAAb/AQAG/3kAC/8BAAH/AfQBFRxDARUB9AH/AQAL/wIAC/8BAAP/AZIBURhSAVEBkgP/
+        AQAL/3kABv8BAAb/AQAB/wHxHEMB8QP/AQAG/wEACv8BAAb/AQAD/wGSAUsWUgFLAZIF/wEABv8BAAT/
+        eQAG/wEABv8BAAH/AfAaQwHwBf8BAAb/AQAD/wEABv8BAAb/AQAD/wHvAUoUUgFKAQcH/wEABv8BAAP/
+        eAAI/wEABv8BAAH/AfEBFBZDARQB8QEABv8BAAb/AQAK/wEABv8BAAP/AfIB6wFLEFIBSwHrAfIC/wEA
+        Bv8BAAb/AQAC/3gACf8BAAb/AQAB/wH0AesUQwHrAfQC/wEABv8BAAb/AQAK/wEABv8BAAT/AbwBbQFL
+        DFIBSwFtAbwF/wEABv8BAAb/AQAB/3kACf8BAAb/AQAC/wG8ARMQQwETAbwF/wEABv8BAAb/AgAJ/wEA
+        Bv8BAAX/AfIB9wFtAUoCSwJRAksBSgFtAfcB8gH/AQAG/wEABv8BAAb/eQAL/wEABv8BAAP/AbwBbQxD
+        AW0BvAH/AQAG/wEABv8BABH/AQAG/wEAB/8B9AHyAfACvAHwAfMB9AX/AQAG/wEABv8BAAb/eQAB/wEA
+        Av8BAAH/AQAB/wEAAv8BAAH/AQAE/wEAAf8BAAL/AfQBvAGSAW0BEwJDARMBbQGSAbwB9AT/AQAB/wEA
+        BP8BAAH/AQAE/wEAAf8BAAL/AgAB/wEAAv8BAAH/AQAB/wEAAv8BAAH/AQAE/wEAAf8BAAT/AQAB/wEA
+        BP8BAAH/AQAE/wEAAf8BAAT/AQAB/wEABP8BAAH/AQAC/3kAAUIBTQE+BwABPgMAASgDAAHwAwABPAMA
+        AQEBAAEBBQABgAEHFgAD/wEAAaEBQgEEASABUAGhAUIBigEUASABQgEFAQoBFAEoFgABEAEgAUAEAAGB
+        AQIBBBEAAQgEAAEIARABIAGAAwABQAGBAQIRAAGEAwABAgEEAQgBGAFAAwABIAFAAYERAAECAwABAQEC
+        AQQBAAEgAwABEAEgAUARAAGBBAABgQECARgBEAMAAQgBEAEhEQABQAGAAwABQAGBAQQBCAMAAQQBCAEQ
+        EQABIAQAASABQAGCBAABAgEEAQgRAAEQASADAAEQASABQQECAwABAQECAQQRAAEIARADAAEIARABIAGB
+        BAABgQECEQABhAEIAgABAgEEAQgBGAFAAYADAAFAAYERAAECAQQCAAEBAQIBBAEAASABQAMAASABQBEA
+        AYEBAgMAAYEBAgEYARABIAIAAQgBEAEhEQABQAGBAwABQAGBAQQBCAEQAgABBAEIARARAAEgAUABgAIA
+        ASABQAGCAQQBCAIAAQIBBAEIEQABEAEgAUACAAEQASABQQECAQQCAAEBAQIBBBEAAQgBEAMAAQgBEAEg
+        AYEEAAGBAQIRAAGEAQgBEAIAAQQBCAEYAUABgQMAAUABgREAAQIBBAEIAgABAgEEAQABIAFAAwABIAFA
+        EQABgQECAwABAQECARgBEAEgAwABEAEhEQABQAGBBAABgQEEAQgBEAMAAQgBEBEAASABQAGAAwABQAGC
+        AQQBCAMAAQQBCBEAARABIAFABAABQQECAQQEAAEEEQABCAEQASADAAEQASABgQECAwABAQECEQABhAEI
+        AQABIAIAAQgBGAFAAYAEAAGBEQABAgEEBAABBAEAASABQAQAAUARAAGBAQIEAAECAQgBEAEgBAABIBEA
+        AUABgQQAAQEBBAEIARAEAAEQEQABIAFABQABggEEAQgEAAEIEQABEAEgBQABQQECBQABBBEAAQgBEAQA
+        ARABIAGBBAABAQECEQABhAEIBQABGAFAAYAEAAEBEQABAgcAASABQBYAAYEDAAEQAgABCAEQFwABQAGA
+        BQABBAEIFwABIAFABQABAgEEFwABEAEgBQABAQECFwABCAMAAYADAAGBFwABhAYAARgBQAUAAQERAAEC
+        AgABEAQAASAXAAGBBgABCAEQFwABQAGABQABBAEIFwABIAFABQABAgEEFwABEAEgBQABAQECFwABCAUA
+        AQQBAAGBBQABQBEAAYQGAAEYAUAFAAEBEQABAgcAASAXAAGBBQABQAEIARAEAAEEEgABQAGABAABIAEE
+        AQgEAAECEgABIAFABAABEAECAQQEAAEBEgABEAEgBAABCAERAQIFAAGBEQABCAEQBAABBAEAAYEEAAEg
+        AUARAAGAAQgDAAEBAQABGAEAAYADAAEQAQERAAECAQQEAAGBAQABIAFAAwABCAEQEQABgQECBAABQAGI
+        ARABIAMAAQQBCBIAAYEDAAEQASABQAEIARACAAEBAQIBBBIAAUABgAIAAQgBEAEgAQQBCAMAAYEBAhEA
+        AYABIAFAAgABBAEIARgBAgEEAgABIAFAAYESAAEQASABAAEBAQIBBAEAAQEBAgIAARABIAFAEQABpQFK
+        ARQCAAGhAUIBmgFUAaEBQgGFAQoBFAEpEQAL
+</value>
+  </data>
 </root>
