--- a/GerenciadorDomotico/GerenciadorDomotico/Dispositivos/ctlDispositivoTemperatura.resx
+++ b/GerenciadorDomotico/GerenciadorDomotico/Dispositivos/ctlDispositivoTemperatura.resx
@@ -117,4 +117,157 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imgList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imgList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABa
+        IQAAAk1TRnQBSQFMAgEBAwEAARgBAAEoAQABPAEAATwBAAT/AQkBEAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwAB8AMAATwDAAEBAQABCAUAAUABOBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AgAB/wEABP8BAAH/
+        AQAE/wEABv8BAAT/AQAB/wHvARMBFAH3Af8BAAH/AQAE/wEAAf8BAAT/AQAB/wEABP8BAAH/AQAD/wEA
+        Af8BAAT/AQAB/wEABP8BAAb/AQAE/wEAAv8C8wH0Af8BAAH/AQAE/wEAAf8BAAT/AQAB/wEABP8BAAH/
+        AQAD/xYAAfQB7wFtARUJQwESAewB8AH/UQAZ/wL0AQcEQwGSA/QH/wEABv8BAAb/AQAc/wEHAW0EFAFt
+        AQcC/wEABv8BAAb/AQAG/wEAAv8TAAHzAewSQwEVAbwB/04ABP8BABH/AfQB6gxDAeoH/wEABv8BAAb/
+        AQAF/wEAE/8B8gHqCBQB6gHyAf8BAAb/AQAG/wEABv8BAAH/EQAB8BhDARIB/00ABP8BABD/AfEN7AHq
+        AbwBAAb/AQAG/wEABv8CAAT/AQAR/wHyDBQB8gH/AQAG/wEABv8BAAb/EAAB8AEUG0MB7AH/SgAG/wEA
+        Ff8B9AHzAfABBwH3AewB6gEVAUMBBwH/AQAG/wEABv8BAAz/AQAQ/wESDBQBEgL/AQAG/wEABv8BAAb/
+        DQAB/wHqH0MBvEoABv8BAA7/AfMBBwH3AewB6gEVCUMBBwL/AQAG/wEABv8BAAT/AgAG/wEADv8BBw4U
+        AbwC/wEABv8BAAb/AQAE/w0AAfAiQwETSAAB/wEABv8BAA3/AQcOQwEHA/8BAAb/AQAG/wEABf8BAAb/
+        AQAN/wHsDhQB7AP/AQAG/wEABv8BAAT/CwAB7CVDAfRGAAL/AQAT/wHyCQcB7wHtAW0BFQFDAQcE/wEA
+        Bv8BAAb/AQAF/wEAE/8B7Q4UAe0E/wEABv8BAAb/AQAD/woAAeonQwHyRQAD/wEABv8BAA//AfQB8QEH
+        AfcB7AESBUMBBwX/AQAG/wEABv8BAAX/AQAG/wEADP8O8Ab/AQAG/wEABv8BAAL/CQAqQwHyRAAE/wEA
+        Bv8BAAr/AfEB7AESDEMBBwb/AQAG/wEABv8BAAX/AQAG/wEACf8B9AEHA+8B9wrvAQcB9AX/AQAG/wEA
+        Bv8BAAH/CAAB6itDAfJEAAT/AQAG/wEACf8BBw5DAQcBAAb/AQAG/wEABv8CAAT/AQAG/wEACP8B7BAU
+        AewG/wEABv8BAAb/CAAB+C1DAfRCAAb/AQAG/wEACP8B9AHzAfIB8wHyAfMC8gG8AfcB7AEUA0MBBwH/
+        AQAG/wEABv8BAAz/AQAG/wEAB/8B7BAUAesH/wEABv8BAAb/BgAB7y5DARVDAAb/AQAG/wEACf8B8wHw
+        AQcB7AHqARUHQwEHAv8BAAb/AQAG/wEABP8CAAb/AQAG/wEABv8B9BD3AfQB/wEABv8BAAb/AQAE/wYA
+        AfQwQwHqQQAB/wEABv8BAAb/AQAG/wG8DkMBBwP/AQAG/wEABv8BAAX/AQAG/wEABv8BAAb/AfAN7AHt
+        AbwD/wEABv8BAAb/AQAE/wUAARUxQwHxQAAC/wEABv8BAAb/AQAF/wHqDkMBbQT/AQAG/wEABv8BAAX/
+        AQAG/wEABv8BAAT/AfQQFAH0A/8BAAb/AQAG/wEAA/8EAAHvM0NAAAP/AQAG/wEABv8BAAP/AfMQQwH0
+        BP8BAAb/AQAG/wEABf8BAAb/AQAG/wEABP8BEw4UARMF/wEABv8BAAb/AQAC/wQAARUKQwEVHBQBFQtD
+        AZI/AAT/AQAG/wEACf8B8xBDAfMF/wEABv8BAAb/AQAF/wEABv8BAAr/AfMOBwHzBv8BAAb/AQAG/wEA
+        Af8DAAHsCkMB9B//ARIKQ0AABP8BAAb/AQAG/wEAAf8B8hBDAfIG/wEABv8BAAb/AgAE/wEABv8BAAb/
+        AQAB8xIHAfMF/wEABv8BAAb/AwAB/wpDAfgC/wHzAe8D/wH0Ae8D/wHyAe8S/wHwCkMBkj4ABv8BAAb/
+        AQAG/wEAAbwFQwHrARUDQwHrARUEQwG8B/8BAAb/AQAM/wEABv8BAAb/AQcBSxBRAUsBBwb/AQAG/wEA
+        Bv8CAAG8CkMB7AL/AkMBEwH/AfICQwHrAf8B8gJDAewK/wHzARMBQwETAfEC/wHyC0MB/z4ABv8BAAb/
+        AQAG/wH3BEMB7AH/AQcCQwHrAf8BvARDAfcI/wEABv8BAAT/AgAG/wEABv8BAAX/AZISUgGSB/8BAAb/
+        AQAE/wMAARUKQwHsAv8CQwETAf8B8gJDAesB/wHyAkMB7An/AfQBQwEUAewBFAFDAfQB/wHyC0MB8j0A
+        Af8BAAb/AQAG/wEABf8B6gRDAbwB/wH3AkMB6gH/AfMEQwHqCf8BAAb/AQAF/wEABv8BAAb/AQAE/wHr
+        ElIB6wj/AQAG/wEABP8BAAH/C0MB7AL/AfIBkgP/AfIB9wP/AfEB9wr/Ae8BQwP/AUMB7QH/AfILQwHr
+        PQAC/wEABv8BAAb/AQAD/wHzBUMB8wH/AW0DQwL/ARQEQwHzCf8BAAb/AQAF/wEABv8BAAb/AQAD/wES
+        ElIBEgn/AQAG/wEAA/8BAAHvC0MB7Bj/Ae8BQwP/AUMB7AH/AfIMQz0AA/8BAAb/AQAG/wEAAv8B7wRD
+        ARQC/wRDAfEB/wHsBEMB9xH/AQAF/wEABv8BAAb/AQAB/wHzAUoSUgFKAfMQ/wEAAv8BAAFtC0MB7Bj/
+        AfMBQwETAe8BFAFDAfQB/wHyDEMB9DwABP8BAAb/AQAG/wEAAfQBFQRDAewB/wHxBEMBBwH/Ae8EQwEV
+        AfQK/wEABv8BAAX/AQAG/wEABv8BAAEHAVESUgFRAQcK/wEABv8BAAH/AQAMQwHsGf8B8wNDAfEC/wHy
+        DEMB7z0ABP8BAAb/AQAG/wH3BUMBBwEAAe8EQwHsAf8B8QVDAfcL/wEABv8CAAT/AQAG/wEABv8B7BRS
+        AewL/wEABv8CAAxDAfgg/wHwDEMB+DwABv8BAAb/AQAE/wHzBkMB8gH/AesEQwEUAv8GQwHzC/8BAAz/
+        AQAG/wEABP8B9AESFFIBEgz/AQAG/wH0DUMB9B//AeoMQwESPQAG/wEABv8BAAP/AW0GQwL/ARUFQwH0
+        Af8B6gVDAW0M/wEABf8BAAb/AQAG/wEAA/8BBwFRFFIBUQEHDP8BAAX/AbwPQwHvAf8qQzwAAf8BAAb/
+        AQAG/wEAAf8B9wZDAesB/wHyBkMB8AH/AZIGQwH3DP8BAAX/AQAG/wEABv8BAAL/AeoWUgHqDf8BAAT/
+        AZIPQwHvAf8qQzwAAv8BAAb/AQAG/wHxB0MB7wH/AQcGQwH3Af8BvAdDAfAM/wEABf8BAAb/AQAG/wEA
+        AQcBSxZSAUsBBw3/AQAD/wFtD0MB7wH/KkM8AAP/AQAG/wEABP8B9AEUB0MB8QH/AewGQwFtAf8B8wdD
+        ARQB9Az/AQAF/wEABv8BAAX/AfQBEhhSARIB9A3/AQAC/wHqD0MB7wH/KkM8AAT/AQAG/wEAA/8B6whD
+        AfQB/wEUB0MC/wEVB0MB6wb/AQAG/wEABf8BAAb/AQAE/wHsCFIBGgEbBlIBGwEaCFIB7Af/AQAG/wEA
+        Af8BbQ9DAe8B/ypDPQAE/wEABv8BAAH/AQcIQwHqAf8B8whDAfIB/wHrCEMBBw3/AgAE/wEABv8BAAL/
+        AQcBSgdSAVkB9gEaBlIBGgH2AVgHUgFKAQcO/wEAAewPQwHvAf8qQzwABv8BAAb/AfQBFQhDAZIB/wG8
+        CEMBBwH/Ae8IQwEVAfQT/wEABv8BAAHzARMIUgGaAf8BeQZSAXkB/wGaCFIBEwHzDv8B7w9DAe8B/ypD
+        PQAG/wEABf8B7AlDAfAB/wGSA0MC6gNDAewBAAHxCUMB7A3/AQAG/wEABv8B6whSAVgB9gEbCFIBGgH2
+        CVIB6w7/AfMPQwHvAf8BFChDARQ8AAH/AQAG/wEAA/8B8wpDAfQB/wHqAUMBEwHyAv8B8gETAUMBEwH/
+        AfQKQwHzDf8BAAb/AQAE/wHwAUoIUgGaAf8BeghSAXoB/wGaCFIBSgHwDf8BAA5DAW0D/wEUAkMB+AEV
+        A0MBBwESA0MBBwHsARUYQwFtPAAC/wEABv8BAAL/AfcJQwETAf8B9AJDAfEB/wL0Af8B8AJDAfQB/wES
+        CUMBkg7/AQAG/wEAA/8B6wlSAfYBGwpSAcMB9AlSAesN/wEADkMB8QP/AW0CQwHrAfQDQwHyAf8B7QJD
+        A/8YQwGSPAAD/wEABv8BAAH/ARQJQwHsAf8B8QFDARQC/wEUARMC/wEVAUMB8QH/AewJQwEUD/8BAAb/
+        AQAB/wHzAUoIUgF6Af8BegpSAXoB/wF6CFIBSgHzDP8BAAETDUMBEwP/ARUDQwHsAfgDQwFtAf8BFQJD
+        AewB/wHzF0MB8jwABP8BAAb/AfMKQwEHAf8B7wFDAeoB/wHzAkMB8wEAAeoBQwHvAf8BBwpDAfMP/wEA
+        Bv8BAAEHAVEIUgEbAfYMUgH2AcMIUgFRAQcM/wEAAewOQwETAewFQwESAfIEQwG8AfMDQwHtAf8BkhZD
+        PgAE/wEABf8BBwpDAfcB/wG8AUMBkgH/AfECQwHxAf8B7QFDAbwB/wH3CkMBBwr/AgAE/wEABv8BkghS
+        AXoB/wGaDFIBmgH/AXoIUgGSC/8CAAHyFUMBbQGSBEMBbQH/BEMC/xVDARU9AAb/AQAE/wH3CkMBEgL/
+        AfIB/wEAAewCQwHtAv8B8gL/ARIKQwH3Ef8BAAX/AesIUgEaAfYNUgFYAfYBGwhSAesM/wIAFEMBEgH0
+        BUMBbQH/BEMB9wH/ARQUQwG8PgAG/wEAA/8B7AtDAZID/wEHBEMBvAP/Ae0LQwHsC/8BAAb/AQAE/wFt
+        B1IBeQH/AZoOUgGaAf8BegdSAW0M/wIAAe0RQwH3AfQBvAEVBUMBBwH0BEMB7AH/ARMUQwH/PQAB/wEA
+        Bv8BAAL/AewMQwEUAewB6gZDAeoB7AEUDEMB7Az/AQAG/wEAA/8BbQdSARoB9gFZC1IBWAJSAVgB/wEa
+        B1IBbQz/AgAB9BlDAeoB/wEVBEMB7wH/ARQTQwEVPgAC/wEABv8BAAH/AewkQwHsDf8BAAb/AQAC/wHr
+        BlIBWAH/AfYBGgHDAfYB/wEbAVgEUgFYARsB/wH2ARsBwwH2Af8BWQZSAesM/wMAARUVQwJtAQcB/wHt
+        BUMC/xRDAf8+AAP/AQAG/wEAAZIkQwGSDv8BAAb/AQAB/wHsBlIBegH/AvYBGwIaAf8B9gFYAlIBWQEb
+        Af8CGgHDAfQC/wF6BlIB7Az/AwAB/xRDAewC/wHxAeoFQwH3Af8B7BNDAW0/AAT/AQAG/wEHJEMBBwT/
+        AQAK/wEABv8BAAH3B1IBWAVSAXoC9gJ6AfYB/wF6BVIBWQdSAfcF/wEABv8EAAFtHEMB7wH/AfMUQwH/
+        QAAE/wEABf8B8CRDAfAK/wIABP8BAAb/AfABSw1SAXkE9gF5DVIBSwHwC/8FAAH/F0MBFQHxAQcB8AL/
+        AfIBFRNDAe1AAAb/AQAE/wH0JEMB9BH/AQAF/wH0AUoOUgFYAvYBWA5SAUoB9Az/BQABBxZDAW0D/wHy
+        AfgVQwH/QQAG/wEABP8B6yJDAesB/wEACv8BAAb/AQAF/wHsIFIB7AL/AQAK/wYAMEMB/0EAAf8BAAb/
+        AQAD/wG8IkMBvAL/AQAK/wEABv8BAAT/AfEBSx5SAUsB8QP/AQAJ/wYAAf8BFS1DAe9CAAL/AQAG/wEA
+        A/8BFCBDARQE/wEACv8BAAb/AQAE/wHrHlIB6wX/AQAI/wcAAfQsQwHsQwAD/wEABv8BAAL/AQcgQwEH
+        Bf8BAAb/AQAD/wEABv8BAAP/AfMBShxSAUoB8wb/AQAG/wkAAfQqQwEURAAE/wEABv8BAAL/AW0eQwFt
+        B/8BAAr/AQAG/wEAA/8BBwFLGlIBSwEHAf8BAAb/AQAG/wkAAfQoQwH4RgAL/wEAAf8B9AEVHEMBFQH0
+        Af8BAAv/AgAL/wEAA/8BkgFRGFIBUQGSA/8BAAv/CwAB9AEVJUMBkkYABv8BAAb/AQAB/wHxHEMB8QP/
+        AQAG/wEACv8BAAb/AQAD/wGSAUsWUgFLAZIF/wEABv8BAAT/CwAB/yRDAfFIAAb/AQAG/wEAAf8B8BpD
+        AfAF/wEABv8BAAP/AQAG/wEABv8BAAP/Ae8BShRSAUoBBwf/AQAG/wEAA/8NAAEHIEMBEwH0SAAI/wEA
+        Bv8BAAH/AfEBFBZDARQB8QEABv8BAAb/AQAK/wEABv8BAAP/AfIB6wFLEFIBSwHrAfIC/wEABv8BAAb/
+        AQAC/w4AAf8BbRxDARUBB0oACf8BAAb/AQAB/wH0AesUQwHrAfQC/wEABv8BAAb/AQAK/wEABv8BAAT/
+        AbwBbQFLDFIBSwFtAbwF/wEABv8BAAb/AQAB/xAAAfQaQwGSTQAJ/wEABv8BAAL/AbwBExBDARMBvAX/
+        AQAG/wEABv8CAAn/AQAG/wEABf8B8gH3AW0BSgJLAlECSwFKAW0B9wHyAf8BAAb/AQAG/wEABv8TAAH0
+        AewUQwEVAfAB/00AC/8BAAb/AQAD/wG8AW0MQwFtAbwB/wEABv8BAAb/AQAR/wEABv8BAAf/AfQB8gHw
+        ArwB8AHzAfQF/wEABv8BAAb/AQAG/xUAAfEB7AEUDUMBbQHvAf9RAAH/AQAC/wEAAf8BAAH/AQAC/wEA
+        Af8BAAT/AQAB/wEAAv8B9AG8AZIBbQETAkMBEwFtAZIBvAH0BP8BAAH/AQAE/wEAAf8BAAT/AQAB/wEA
+        Av8CAAH/AQAC/wEAAf8BAAH/AQAC/wEAAf8BAAT/AQAB/wEABP8BAAH/AQAE/wEAAf8BAAT/AQAB/wEA
+        BP8BAAH/AQAE/wEAAf8BAAL/GgAB/wHxAfcBbQETAUMBEgHsAQcB9FUAAUIBTQE+BwABPgMAASgDAAHw
+        AwABPAMAAQEBAAEBBQABgAEHFgAD/wEAAaEBQgEEASABUAGhAUIBigEUASABQgEFAQoBFAEoAv8B/AEA
+        AQEC/wHwDgABEAEgAUAEAAGBAQIBBAL/AeACAAE/Af8B8AkAAQgEAAEIARABIAGAAwABQAGBAQIC/wGA
+        AgABDwH/AfAJAAGEAwABAgEEAQgBGAFAAwABIAFAAYEB/wH+AwABAwH/AfAJAAECAwABAQECAQQBAAEg
+        AwABEAEgAUAB/wH4AwABAQH/AfAJAAGBBAABgQECARgBEAMAAQgBEAEhAf8B8AQAAf8B8AkAAUABgAMA
+        AUABgQEEAQgDAAEEAQgBEAH/AeAEAAE/AfAJAAEgBAABIAFAAYIEAAECAQQBCAH/AcAEAAEfAfAJAAEQ
+        ASADAAEQASABQQECAwABAQECAQQB/wGABAABDwHwCQABCAEQAwABCAEQASABgQQAAYEBAgH/BQABBwHw
+        CQABhAEIAgABAgEEAQgBGAFAAYADAAFAAYEB/gUAAQMB8AkAAQIBBAIAAQEBAgEEAQABIAFAAwABIAFA
+        AfwFAAEDAfAJAAGBAQIDAAGBAQIBGAEQASACAAEIARABIQH4BQABAQHwCQABQAGBAwABQAGBAQQBCAEQ
+        AgABBAEIARAB+AYAAfAJAAEgAUABgAIAASABQAGCAQQBCAIAAQIBBAEIAfAGAAHwCQABEAEgAUACAAEQ
+        ASABQQECAQQCAAEBAQIBBAHwBgABcAkAAQgBEAMAAQgBEAEgAYEEAAGBAQIB4AYAAXAJAAGEAQgBEAIA
+        AQQBCAEYAUABgQMAAUABgQHABgABMAkAAQIBBAEIAgABAgEEAQABIAFAAwABIAFAAcAGAAEQCQABgQEC
+        AwABAQECARgBEAEgAwABEAEhAcAGAAEQCQABQAGBBAABgQEEAQgBEAMAAQgBEAGABgABEAkAASABQAGA
+        AwABQAGCAQQBCAMAAQQBCAGABgABEAkAARABIAFABAABQQECAQQEAAEEAYAQAAEIARABIAMAARABIAGB
+        AQIDAAEBAQIBgBAAAYQBCAEAASACAAEIARgBQAGABAABgQGAEAABAgEEBAABBAEAASABQAQAAUARAAGB
+        AQIEAAECAQgBEAEgBAABIBEAAUABgQQAAQEBBAEIARAEAAEQEQABIAFABQABggEEAQgEAAEIEQABEAEg
+        BQABQQECBQABBBEAAQgBEAQAARABIAGBBAABAQECEQABhAEIBQABGAFAAYAEAAEBEQABAgcAASABQBYA
+        AYEDAAEQAgABCAEQFwABQAGABQABBAEIBgABgBAAASABQAUAAQIBBAYAAYAQAAEQASAFAAEBAQIGAAGA
+        EAABCAMAAYADAAGBBgABgAYAARAJAAGEBgABGAFABQABAQGABgABEAkAAQICAAEQBAABIAYAAcAGAAEQ
+        CQABgQYAAQgBEAYAAcAGAAEQCQABQAGABQABBAEIBgABwAYAATAJAAEgAUAFAAECAQQGAAHgBgABMAkA
+        ARABIAUAAQEBAgYAAeAGAAFwCQABCAUAAQQBAAGBBQABQAHwBgABcAkAAYQGAAEYAUAFAAEBAfAGAAHw
+        CQABAgcAASAGAAH4BgAB8AkAAYEFAAFAAQgBEAQAAQQBAAH8BQABAQHwCQABQAGABAABIAEEAQgEAAEC
+        AQAB/AUAAQMB8AkAASABQAQAARABAgEEBAABAQEAAf4FAAEHAfAJAAEQASAEAAEIAREBAgUAAYEB/wUA
+        AQ8B8AkAAQgBEAQAAQQBAAGBBAABIAFAAf8BgAQAAR8B8AkAAYABCAMAAQEBAAEYAQABgAMAARABAQH/
+        AcAEAAE/AfAJAAECAQQEAAGBAQABIAFAAwABCAEQAf8B4AQAAX8B8AkAAYEBAgQAAUABiAEQASADAAEE
+        AQgB/wH4BAAB/wHwCgABgQMAARABIAFAAQgBEAIAAQEBAgEEAf8B/AMAAQMB/wHwCgABQAGAAgABCAEQ
+        ASABBAEIAwABgQECAv8DAAEPAf8B8AkAAYABIAFAAgABBAEIARgBAgEEAgABIAFAAYEC/wHAAgABHwH/
+        AfAKAAEQASABAAEBAQIBBAEAAQEBAgIAARABIAFAAv8B+AIAAv8B8AkAAaUBSgEUAgABoQFCAZoBVAGh
+        AUIBhQEKARQBKQP/AYABHwL/AfAfAAs=
+</value>
+  </data>
 </root>
